--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,3 +1,27 @@
+body {
+    margin: 0;
+    padding: 0;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.container-fluid {
+    width: 100%;
+    max-width: none;
+    padding: 0;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.col-md-4, .col-md-6, .col-md-12 {
+    padding: 0;
+}
+
 main > .container {
     padding: 70px 15px 20px;
 }
