--- a/web/css/site.css
+++ b/web/css/site.css
@@ -24,9 +24,9 @@ main > .container {
 }
 
 .footer {
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     font-size: .9em;
-    height: 60px;
+    height: 10px;
 }
 
 .footer > .container {
