Улучшен внешний вид страниц новостей и заказов: добавлены стили для центрирования текста, изменен фон и оформление карточек заказов, а также обновлены стили для таблиц. Теперь информация о заказах отображается в более удобном формате с использованием сетки.

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -9,6 +9,11 @@
     animation: main 1.5s ease 1;
 }
 
+
+table {
+    color: rgb(255, 0, 0);
+}
+
 @keyframes main {
     0% {
         opacity: 0;
