--- a/web/css/site.css
+++ b/web/css/site.css
@@ -256,9 +256,9 @@ a.desc:after {
 .catalog-title {
     color: white;
     font-family: Impact;
-    font-size: 2.5em;
-    margin-bottom: 20px;
-    text-align: center;
+    font-size: 1.8em;
+    margin-bottom:5px;
+    text-align: left;
 }
 
 /* Убираем стандартные стили формы Yii2 */
