Обновлено оформление карточек новостей на главной странице: изменены стили для фона и текста, улучшено визуальное восприятие. Также обновлены стили для элементов каталога, изменен цвет границы и фона. Исправлен цвет текста кнопки выхода в навигационном меню для более гармоничного отображения.

--- a/web/css/catalog.css
+++ b/web/css/catalog.css
@@ -1,12 +1,15 @@
 /* Стили для каталога */
 .catalog-item {
-    background-color: #111;
-    border: 1px solid #333;
+    background-color: none;
+    border: 3px solid rgb(160, 2, 2);
     padding: 15px;
     border-radius: 10px;
     transition: all 0.3s ease;
     
 }
+
+
+
 
 .catalog-item:hover {
     transform: translateY(-5px);
