--- a/web/css/site.css
+++ b/web/css/site.css
@@ -92,7 +92,7 @@ a.desc:after {
 /* align the logout "link" (button in form) of the navbar */
 .nav li > form > button.logout {
     padding-top: 7px;
-    color: rgba(255, 0, 0, 0.5);
+    color: rgba(160, 2, 2);
 }
 
 @media(max-width:767px) {
